<resources>
    <string name="app_name">연병장</string>

    <string name="base_select">부대 설정</string>
    <string name="base_select_information">내 부대를 설정하고 \n연병장에 집결하세요!</string>
    <string name="ask_base_select">부대를 새로 설정하시겠습니까?</string>

    <string name="start">집결하기</string>

    <string name="base_find_query_hint">내 부대 이름으로 검색</string>

    <string name="base_list">부대 목록</string>

    <string name="login_registration">로그인/회원가입</string>
    <string name="login">로그인</string>
    <string name="registration">회원가입</string>

    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="password_confirm">비밀번호 확인</string>

    <string name="find_password">비밀번호 찾기</string>

    <string name="mission">미션</string>
    <string name="group">부대생활</string>
    <string name="chat">채팅</string>
    <string name="profile">프로필</string>

    <string name="title">제목</string>

    <string name="request_email_pw">모든 사항을 입력해주세요.</string>
    <string name="request_pw_confirm">비밀번호를 다시 확인해주세요.</string>
    <string name="registration_succeed">회원가입이 완료되었으니 이메일을 인증해주세요.</string>
    <string name="registration_failed">회원가입에 실패하였습니다..</string>

    <string name="request_email_verify">인증 이메일이 발송되었습니다.</string>
    <string name="request_email_verify_fail">인증 이메일 발송에 실패하였습니다..</string>
    <string name="request_email_verify_complete">이메일 인증을 완료해주세요.</string>

    <string name="login_fail">아이디/비밀번호를 확인해주세요.</string>

    <string name="users">Users</string>

    <string name="confirm">확인</string>
    <string name="cancel">취소</string>

    <string name="find_password_email_sent">비밀번호 재설정 이메일이 발송되었습니다.</string>
    <string name="chekc_email">이메일을 다시 확인해주세요.</string>

    <string name="mission_list">미션내역</string>
    <string name="request_list">요청내역</string>

    <string name="logout">로그아웃</string>
    <string name="delete_user">탈퇴하기</string>

    <string name="delete_user_info">계정을 삭제하면 모든 정보가 삭제됩니다.\n그럼에도 계정을 삭제하시겠습니까?</string>

    <string name="user_deleted">계정이 삭제되었습니다.</string>

    <string name="edit_profile">프로필 설정</string>

    <string name="name">이름</string>

    <string name="request_name">이름을 입력해주세요.</string>
    <string name="change_complete">수정이 완료되었습니다.</string>
    <string name="change_failed">수정에 실패하였습니다..</string>

    <string name="category">카테고리</string>
    <string name="update_date">업뎃시간</string>
    <string name="post_content">포스팅 내용</string>

    <string name="like">좋아요</string>
    <string name="comment">댓글</string>

    <string name="done">완료</string>

    <string name="register_new_mission">새로운 미션 등록하기</string>

    <string name="price">가격</string>
    <string name="won">₩</string>

    <string name="request_content">제시할 미션 내용을 작성해주세요.</string>

    <string name="errand">심부름</string>
    <string name="laundry">세탁</string>
    <string name="delivery">배달</string>
    <string name="cleaning">청소</string>
    <string name="lesson">레슨</string>
    <string name="teach">과외</string>
    <string name="consult">상담</string>
    <string name="etc">기타</string>

    <string name="pick_mission_date">수행날짜 선택</string>
    <string name="pick_mission_time">수행시간 선택</string>

    <string name="place">장소</string>

    <string name="register_new_post">부대생활 글쓰기</string>

    <string name="request_post_content">부대생활 관련된 질문이나 이야기를 적어보세요.</string>


    <string name="check_sns_principle">군 장병 SNS 이용 기본 원칙을 준수합니다.</string>

    <string name="view_sns_principle">지침 확인</string>

    <string name="lost">분실센터</string>
    <string name="question">부대 질문</string>
    <string name="routine">일상</string>
    <string name="news">부대 소식</string>
    <string name="hobby">취미 및 자기계발</string>
    <string name="zoo">부대 동물원</string>
    <string name="plant">부대 식물원</string>
    <string name="decoration">생활관 및 숙소 꾸미기</string>
    <string name="health">건강과 운동</string>
    <string name="vacation">휴가</string>

    <string name="request_check_sns_principle">군 장병 SNS 이용 기본원칙 준수에 동의해주세요.</string>

    <string name="no_base">검색하신 부대가 없습니다!</string>

    <string name="please_access_info">부대 미 인증 상태입니다!\n클릭하여 부대 인증을 진행해주세요.</string>

    <string name="start_chat">채팅하기</string>
    <string name="input_message">메시지를 입력하세요.</string>

    <string name="base">부대</string>
    <string name="mission_content">미션 내용</string>
    <string name="mission_title">미션 제목</string>
    <string name="mission_place">미션 장소</string>
    <string name="mission_date">수행 일시</string>
    <string name="mission_price">미션 금액</string>

    <string name="success_mission_register">미션이 등록되었습니다.</string>
    <string name="fail_mission_register">미션 등록에 실패했습니다...</string>

    <string name="picture">사진</string>

    <string name="same_id">본인에게 채팅은 불가능합니다.</string>
    <string name="mission_over">미션이 종료되었습니다.</string>

    <string name="yesterday">어제</string>
    <string name="the_day_before_yesterday">그저께</string>

    <string name="report_post">게시글 신고</string>
    <string name="report_post_info">해당 게시글을 신고하시겠습니까?</string>
    <string name="report_post_complete">게시글을 신고하였습니다.</string>

    <string name="input_comment">댓글을 입력하세요.</string>
    <string name="failed_input_comment">댓글등록에 실패하였습니다.</string>


</resources>
