<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/LN_category_errand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:id="@+id/tv_category_errand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/errand"
                android:textColor="@color/Black"
                android:textSize="15sp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/LN_category_laundry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:id="@+id/tv_category_laundry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/laundry"
                android:textColor="@color/Black"
                android:textSize="15sp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/LN_category_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:id="@+id/tv_category_delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivery"
                android:textColor="@color/Black"
                android:textSize="15sp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/LN_category_cleaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:id="@+id/tv_category_cleaning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cleaning"
                android:textColor="@color/Black"
                android:textSize="15sp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/LN_category_lesson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:id="@+id/tv_category_lesson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lesson"
                android:textColor="@color/Black"
                android:textSize="15sp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/LN_category_teach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:id="@+id/tv_category_teach"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teach"
                android:textColor="@color/Black"
                android:textSize="15sp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/LN_category_consult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:id="@+id/tv_category_consult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/consult"
                android:textColor="@color/Black"
                android:textSize="15sp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/LN_category_etc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:id="@+id/tv_category_etc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/etc"
                android:textColor="@color/Black"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>