<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="550dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/LN_category_lost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tv_category_lost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lost"
                    android:textColor="@color/Black"
                    android:textSize="15sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/LN_category_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tv_category_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question"
                    android:textColor="@color/Black"
                    android:textSize="15sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/LN_category_routine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tv_category_routine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/routine"
                    android:textColor="@color/Black"
                    android:textSize="15sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/LN_category_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tv_category_news"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/news"
                    android:textColor="@color/Black"
                    android:textSize="15sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/LN_category_hobby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tv_category_hobby"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hobby"
                    android:textColor="@color/Black"
                    android:textSize="15sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/LN_category_zoo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tv_category_zoo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zoo"
                    android:textColor="@color/Black"
                    android:textSize="15sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/LN_category_plant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tv_category_plant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/plant"
                    android:textColor="@color/Black"
                    android:textSize="15sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/LN_category_health"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tv_category_health"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/health"
                    android:textColor="@color/Black"
                    android:textSize="15sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/LN_category_vacation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tv_category_vacation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vacation"
                    android:textColor="@color/Black"
                    android:textSize="15sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/LN_category_etc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tv_category_etc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/etc"
                    android:textColor="@color/Black"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>