<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="250dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/logo"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:id="@+id/tv_base_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/base_select"
        android:textColor="@color/Black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_base_select_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/base_select_information"
        android:textColor="@color/DarkGrey"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:background="@drawable/radius"
        android:textColor="@color/White"
        android:textSize="20sp"
        android:textStyle="bold"/>
</LinearLayout>