<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/White">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/White"
                android:elevation="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/iv_new_mission_back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_keyboard_backspace_black_24dp" />

                <TextView
                    android:id="@+id/tv_new_mission_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/register_new_mission"
                    android:textColor="@color/Black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_new_mission_done"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right|center_vertical"
                    android:text="@string/done"
                    android:textColor="@color/Black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp"
                android:layout_marginTop="?attr/actionBarSize">

                <LinearLayout
                    android:id="@+id/LN_new_mission_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/tv_new_mission_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/category"
                        android:textColor="@color/Black"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/iv_new_mission_down"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_expand_more_black_24dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/Grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_new_mission_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/title"
                        android:textSize="18sp"
                        android:inputType="textPersonName" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/Grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_new_mission_place"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/place"
                        android:textSize="18sp"
                        android:inputType="textPersonName" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/Grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_new_mission_won"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/won"
                        android:textColor="@color/Black"
                        android:textSize="18sp"
                        android:layout_marginRight="5dp"/>

                    <EditText
                        android:id="@+id/et_new_mission_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:textSize="18sp"
                        android:ems="10"
                        android:hint="@string/price"
                        android:inputType="number" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/Grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_new_mission_date_pick"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/category_radius"
                        android:gravity="center"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:text="@string/pick_mission_date"
                        android:textColor="@color/White"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_new_mission_time_pick"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/category_radius"
                        android:gravity="center"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:text="@string/pick_mission_time"
                        android:textColor="@color/White"
                        android:textSize="18sp" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/Grey" />

                <EditText
                    android:id="@+id/et_new_mission_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textSize="18sp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/request_content"
                    android:inputType="textMultiLine" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/LN_new_mission_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Transparent_Black"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </FrameLayout>

</RelativeLayout>