<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/White"
    tools:context=".MainActivity">


    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/bottombar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/White"
        android:elevation="5dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/lay_mission"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_mission"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/assignment_white" />

            <TextView
                android:id="@+id/tv_mission"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/mission"
                android:textColor="@color/Black"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_group"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/group_white" />

            <TextView
                android:id="@+id/tv_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/group"
                android:textColor="@color/Black"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_chat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_chat"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/chat_white" />

            <TextView
                android:id="@+id/tv_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/chat"
                android:textColor="@color/Black"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/profile_white" />

            <TextView
                android:id="@+id/tv_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="@color/Black"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>